--- a/index.html
+++ b/index.html
@@ -21,23 +21,6 @@
   <title>Levi Spurlock - Home</title>
 </head>
 <body>
-  <nav>
-    <div class="logo">
-      <h4>Levi Spurlock</h4>
-    </div>
-    <ul class="nav-links">
-      <li><a href="#">Home </a></li>
-      <li><a href="#">Works </a></li>
-      <li><a href="#">About </a></li>
-      <li><a href="#">Contact </a></li>
-    </ul>
-    <div class="burger">
-      <div class="line1"></div>
-      <div class="line2"></div>
-      <div class="line3"></div>
-    </div>
-  </nav>
-
   <div class="grid-container splash">
     <div class="grid-x grid-padding-x main">
       <div class="medium-12 cell">
@@ -100,7 +83,7 @@
                 allowed me to experiment with charts.js. My focus wit this project was to crate something that got all
                 of the vital information needed when trying to learn about COVID-19.<br><br>
                 You can find the full project <a class=link
-                  href="https://www.figma.com/file/mpknFsjovLKxrz8POogYMP/Plant-App?node-id=1%3A2">here</a>.
+                  href="https://levispurlock.github.io/COVID-SITE/">here</a>.
               </p>
             </div>
           </div>
