--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="medium-12 cell">
               <p>This project was a way for me to practice my typography skills, while also creating something that is
                 text focused. Beyond being a typography exercise, this project
-                allowed me to experiment with charts.js. My focus wit this project was to crate something that got all
+                allowed me to experiment with charts.js. My focus with this project was to create something that got all
                 of the vital information needed when trying to learn about COVID-19.<br><br>
                 You can find the full project <a class=link
                   href="https://levispurlock.github.io/COVID-SITE/">here</a>.
